crates/pkgcraft/src/dep/snapshots/pkgcraft__dep__parse__parser__version_tests__number-2.snap
---
source: crates/pkgcraft/src/dep/parse.rs
expression: "number.parse(\"01\").unwrap()"
---
raw: "01"
value: 1
