crates/pkgcraft/src/dep/snapshots/pkgcraft__dep__parse__parser__version_tests__number-3.snap
---
source: crates/pkgcraft/src/dep/parse.rs
expression: "number.parse(\"10\").unwrap()"
---
raw: "10"
value: 10
