crates/pkgcraft/src/dep/snapshots/pkgcraft__dep__parse__parser__version_tests__number.snap
---
source: crates/pkgcraft/src/dep/parse.rs
expression: "number.parse(\"0\").unwrap()"
---
raw: "0"
value: 0
