crates/pkgcraft/src/dep/snapshots/pkgcraft__dep__parse__parser__version_tests__revision-2.snap
---
source: crates/pkgcraft/src/dep/parse.rs
expression: "revision.parse(\"-r1\").unwrap()"
---
raw: "1"
value: 1
