crates/pkgcraft/src/dep/snapshots/pkgcraft__dep__parse__parser__version_tests__revision-3.snap
---
source: crates/pkgcraft/src/dep/parse.rs
expression: "revision.parse(\"-r01\").unwrap()"
---
raw: "01"
value: 1
