crates/pkgcraft/src/dep/snapshots/pkgcraft__dep__parse__parser__version_tests__revision.snap
---
source: crates/pkgcraft/src/dep/parse.rs
expression: "revision.parse(\"\").unwrap()"
---
raw: ""
value: 0
