crates/pkgcraft/src/dep/snapshots/pkgcraft__dep__parse__parser__version_tests__suffix-2.snap
---
source: crates/pkgcraft/src/dep/parse.rs
expression: "suffix.parse(\"_beta\").unwrap()"
---
kind: Beta
version: ~
