crates/pkgcraft/src/dep/snapshots/pkgcraft__dep__parse__parser__version_tests__suffix-6.snap
---
source: crates/pkgcraft/src/dep/parse.rs
expression: "suffix.parse(\"_alpha0\").unwrap()"
---
kind: Alpha
version:
  raw: "0"
  value: 0
