crates/pkgcraft/src/dep/snapshots/pkgcraft__dep__parse__parser__version_tests__suffix-7.snap
---
source: crates/pkgcraft/src/dep/parse.rs
expression: "suffix.parse(\"_alpha01\").unwrap()"
---
kind: Alpha
version:
  raw: "01"
  value: 1
